--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Food Management For Everyone</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="font-awesome.min.css">
     </head>
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="images/logo.jpg"></a>
+                <a href="index.html"><img src="logo.jpg"></a>
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
