--- a/foodb.html
+++ b/foodb.html
@@ -8,7 +8,7 @@
         <body>
             <section class="header">
                 <nav>
-                    <a href="don.html"><img src="images/dog2.png"></a>
+                    <a href="don.html"><img src="dog2.png"></a>
                 </nav>
             </section>
 
@@ -18,31 +18,31 @@
             <div class="row">
                 <div class="donate-col">
                     <h3>MCKS Food For the Hunger foundation Delhi</h3><br>
-                    <img src="images/FoodBanks_01.jpg"><br>
+                    <img src="FoodBanks_01.jpg"><br>
                     <p>Address: Block B, Block B, Nangal Dewat, Sector D, Vasant Kunj, New Delhi, Delhi 110070<br>
                         Phone: 011 2689 8844</p>
                 </div>
                 <div class="donate-col">
                     <h3>Delhi Gurgaon NCR FoodBank, India</h3><br>
-                    <img src="images/gave.jpg"><br>
+                    <img src="gave.jpg"><br>
                     <p>Address: C2/2200, C2 Vasant Kunj, Pocket 2, Sector C, Vasant Kunj, New Delhi, Delhi 110070<br>
                         Phone: 085859 95995</p>
                 </div>
                 <div class="donate-col">
                     <h3>Delhi FoodBank, Responsenet</h3><br>
-                    <img src="images/nicc.jpg"><br>
+                    <img src="nicc.jpg"><br>
                     <p>Address: D-82A, Nangal Dewat, Sector D, Vasant Kunj, New Delhi, Delhi 110070<br>
                         Phone: 085859 95995</p>
                 </div>
                 <div class="donate-col">
                     <h3>The Food Corner</h3><br>
-                    <img src="images/good.jpg"><br>
+                    <img src="good.jpg"><br>
                     <p><br>Address: FIEE Complex, GAURI SHANKAR KANAK MANDIR, Okhla Phase II, Select District, Delhi 110020
                     </p>
                 </div>
                 <div class="donate-col">
                     <h3>Public Food Centre</h3><br>
-                    <img src="images/dona2.jpg"><br>
+                    <img src="dona2.jpg"><br>
                     <p><br>Address: SKV, Block A, Anand Nagar, Inderlok, Delhi, 110035</p>
                 </div>
             </div>
