--- a/learn.html
+++ b/learn.html
@@ -8,7 +8,7 @@
         <body>
             <section class="header">
                 <nav>
-                    <a href="index.html"><img src="images/dog2.png"></a>
+                    <a href="index.html"><img src="dog2.png"></a>
                 </nav>
             </section>
             <section class="wast">
