--- a/manure.html
+++ b/manure.html
@@ -8,7 +8,7 @@
         <body>
             <section class="header">
                 <nav>
-                    <a href="don.html"><img src="images/dog2.png"></a>
+                    <a href="don.html"><img src="dog2.png"></a>
                 </nav>
             </section>
 
@@ -18,12 +18,12 @@
             <div class="row">
                 <div class="donate-col">
                     <h3>Waste Ventures India</h3><br>
-                    <a href="https://wasteventures.com/organic-waste-processing-on-site-composting/"><img src="images/wass.jpg"></a><br>
+                    <a href="https://wasteventures.com/organic-waste-processing-on-site-composting/"><img src="wass.jpg"></a><br>
                     <p><br>Waste Ventures India is a waste management social enterprise working with informal waste pickers and bulk waste generator to create pure organic manure for farmers to use. <br>Anybody can contribute by going to their services section and selecting organic waste processing which lets you compost your food waste either in your own premises or their facility.<br> <br>Address: 19, Press Enclave Marg, Gandhi Park, Sector 7, Pushp Vihar, New Delhi, Delhi 110017</p>
                 </div>
                 <div class="donate-col">
                     <h3>Please Recycle to Save the Planet</h3><br>
-                    <img src="images/wasteback.jpeg"><br>
+                    <img src="wasteback.jpeg"><br>
                     <p><br>Recycling is crucial for environmental sustainability as it conserves resources, reduces energy consumption, and minimizes waste sent to landfills. <br>By reusing materials, recycling lessens pollution, lowers greenhouse gas emissions, and preserves biodiversity. <br>It plays a key role in creating a circular economy, promoting responsible consumption, and mitigating the impact of climate change.</p>
                 </div>
                 
