--- a/orphan.html
+++ b/orphan.html
@@ -8,7 +8,7 @@
         <body>
             <section class="header">
                 <nav>
-                    <a href="don.html"><img src="images/dog2.png"></a>
+                    <a href="don.html"><img src="dog2.png"></a>
                 </nav>
             </section>
 
@@ -18,32 +18,32 @@
             <div class="row">
                 <div class="donate-col">
                     <h3>Arya Orphanage</h3><br>
-                    <img src="images/z6.jpg"><br>
+                    <img src="z6.jpg"><br>
                     <p>Address: Building No, 1488, Pataudi House, near Astha Nursing Home, Kalan Mahal, Daryaganj, New Delhi, Delhi, 110002<br>
                         Phone: 011 2327 2084</p>
                 </div>
                 <div class="donate-col">
                     <h3>Bal Seva Sansthan</h3><br>
-                    <img src="images/z7.jpg"><br>
+                    <img src="z7.jpg"><br>
                     <p>Address: House No. 2, Metro Pillar 719, Street, Shiv Mandir Marg, Phase 1A, Om Vihar, Uttam Nagar, Delhi, 110059<br>
                         Phone: 081789 88589</p>
                 </div>
                 <div class="donate-col">
                     <h3>Kilkari Rainbow Home for Girls</h3><br>
-                    <img src="images/orphan.jpg"><br>
+                    <img src="orphan.jpg"><br>
                     <p>Address: M68H+497, NCC Building, Near Senior Secondary Girls School, Chabiganj, Kashmere, Gate, Delhi, 110006<br>
                         Phone: 011 2653 5961</p>
                 </div>
                 <div class="donate-col">
                     <h3>Mother Teresa Home</h3><br>
-                    <img src="images/y1.jpg"><br>
+                    <img src="y1.jpg"><br>
                     <p>Address: H7P2+F2W, Mathura Rd, Jangpura Rd, Block C, Bhogal, New Delhi, Delhi 110014<br>
                         Phone: 011 2437 5483
                     </p>
                 </div>
                 <div class="donate-col">
                     <h3>Bachchon Ka Ghar</h3><br>
-                    <img src="images/y2.jpg"><br>
+                    <img src="y2.jpg"><br>
                     <p>Address: No.5028, near Honda Showroom, opp. DAV School, Daryaganj, New Delhi, Delhi, 110002<br>
                         Phone: 080765 74560</p>
                 </div>
