--- a/farmer.html
+++ b/farmer.html
@@ -8,7 +8,7 @@
         <body>
             <section class="header">
                 <nav>
-                    <a href="don.html"><img src="images/dog2.png"></a>
+                    <a href="don.html"><img src="dog2.png"></a>
                 </nav>
             </section>
 
@@ -18,13 +18,13 @@
             <div class="row">
                 <div class="donate-col">
                     <h3>Kisan Kalyan Foundation</h3><br>
-                    <img src="images/HOW-CAN-WE-HELP-1.jpg"><br>
+                    <img src="HOW-CAN-WE-HELP-1.jpg"><br>
                     <p><br>Address: Nearby , CB- 228E, 3rd Floor Metro Station, Ring Rd, Naraina, New Delhi, Delhi 110028<br>
                         Phone: 070114 47737</p>
                 </div>
                 <div class="donate-col">
                     <h3>National Environment & Rural Development</h3><br>
-                    <img src="images/Reducin.jpg"><br>
+                    <img src="Reducin.jpg"><br>
                     <p><br>Address: 201, Plot No. A, Om Apartments, 13, Nanda Block, Mahavir Enclave, New Delhi, Delhi 110045<br>
                         Phone: 099106 09596</p>
                 </div>
