--- a/animal.html
+++ b/animal.html
@@ -8,7 +8,7 @@
         <body>
             <section class="header">
                 <nav>
-                    <a href="don.html"><img src="images/dog2.png"></a>
+                    <a href="don.html"><img src="dog2.png"></a>
                 </nav>
             </section>
 
@@ -18,28 +18,28 @@
             <div class="row">
                 <div class="donate-col">
                     <h3>Animal Rain Bashera</h3><br>
-                    <img src="images/y3.jpg"><br>
+                    <img src="y3.jpg"><br>
                     <p><br>Address: 18 Block, Pump House, Near, Vasundhara Rd, Subhash Market, Block 9, Red Light, Trilokpuri, Delhi, 110096</p>
                 </div>
                 <div class="donate-col">
                     <h3>Chardikala Animal Shelter</h3><br>
-                    <img src="images/y4.jpg"><br>
+                    <img src="y4.jpg"><br>
                     <p><br>Address: Khasra number 881, Siraspur Rd, near rd farm, Badli Industrial Area, Siraspur, New Delhi, Delhi, 110082</p>
                 </div>
                 <div class="donate-col">
                     <h3>Sanjay Gandhi Animal Care Centre</h3><br>
-                    <img src="images/dog.jpg"><br>
+                    <img src="dog.jpg"><br>
                     <p><br>Address: M44C+WWP, Shivaji College Rd, Shivaji Enclave, Raja Garden, Delhi, 110027</p>
                 </div>
                 <div class="donate-col">
                     <h3>Sai Animal Welfare Ashram</h3><br>
-                    <img src="images/y9.jpg"><br>
+                    <img src="y9.jpg"><br>
                     <p><br>Address: F6J3+8F2, Rajpur Rd, Maidan Garhi, Chhatarpur, New Delhi, Delhi 110068
                     </p>
                 </div>
                 <div class="donate-col">
                     <h3>Humanity first animal care</h3><br>
-                    <img src="images/x1.jpg"><br>
+                    <img src="x1.jpg"><br>
                     <p><br>Address: Rajdhani public school, Arpan Vihar colony, Jaitpur, Badarpur, New Delhi, Delhi 110044
                     </p>
                 </div>
