--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             <nav>
                 <a href="index.html"><img src="logo.jpg"></a>
                 <div class="nav-links" id="navLinks">
-                    <i class="fa fa-times" onclick="hideMenu()"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" onclick="hideMenu()"><path fill="currentColor" d="M18.36 19.78L12 13.41l-6.36 6.37l-1.42-1.42L10.59 12L4.22 5.64l1.42-1.42L12 10.59l6.36-6.36l1.41 1.41L13.41 12l6.36 6.36z"/></svg>
                     <ul>
                         <li><a href="don.html">DONATE</a></li>
                         <li><a href="learn.html">LEARN</a></li>
                         <li><a href="https://sassdeitician.my.canva.site/join-us">JOIN US</a></li>
                     </ul>
                 </div>
-                <i class="fa fa-bars" onclick="showMenu()"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" onclick="showMenu()"><path fill="currentColor" d="M3 18v-2h18v2zm0-5v-2h18v2zm0-5V6h18v2z"/></svg>
             </nav>
 
         <div class="text-box">
